--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,4 @@
 body{
-
     color:#333;
     text-align: left;
     font-family: Arial;
@@ -22,7 +21,7 @@ body{
 #container
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -34,5 +33,13 @@ body{
 
 #post{
 
+    
+}
 
+#footer{
+
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
 }
